# insight-plus

./: .gitignore  CMakeLists.txt  README.md  Unix-Build.sh  Unix-Clean.sh  Win-Build-VS-22.bat  Windows-Clean.bat  Windows-GenVS-22.bat  Xcode-Gen.sh
examples/: CMakeLists.txt
examples/opengl/: CMakeLists.txt  opengl3.cpp
src/headers/: buffer.h  command.h  console.h  drawStrategy.h  fileoutput.h  filter.h  glfwDraw.h  outputStrategy.h
src/source/: buffer.cpp  console.cpp  fileOutput.cpp  filter.cpp  glfwDraw.cpp
